overflow bugs

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Maze&display=swap");
+
 body {
   color: var(--color-text);
   background-image: linear-gradient(
@@ -9,7 +11,7 @@ body {
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Chalkduster,
     Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+    "Rubik Maze" "Helvetica Neue", sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -17,6 +19,6 @@ body {
 }
 
 .parallelFont {
-  font-family: Chalkduster !important;
+  font-family: "Rubik Maze", cursive;
   font-size: larger;
 }
